--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>本文詳細</title>
-	<link rel="stylesheet" href="./css/semantic.min.css">
-	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-	<script src="js/semantic.min.js"></script>
+<meta charset="UTF-8">
+<title>本文詳細</title>
+<link rel="stylesheet" href="./css/semantic.min.css">
+<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+<script src="js/semantic.min.js"></script>
 <style>
 </style>
 </head>
 <body>
-<div class="ui text container">
-	<form th:action="@{/return}" method="post">
-		<table class="ui single line table">
-			<thead>
-				<tr>
- 					<th><p th:text="#{view.btn.details}"></p></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><p th:text="${text}"></p></td>
-				</tr>
-			</tbody>
-		</table>
-		<input type="hidden" name="keepword" th:value="${word}">
-		<button class="ui button" type="submit" name="fromdisplay" th:value="*{page}"><p th:text="#{view.btn.return}"></p></button>
-	</form>
-</div>
+	<div class="ui text container">
+		<form th:action="@{/return}" method="post">
+			<table class="ui single line table">
+				<thead>
+					<tr>
+						<th><p th:text="#{view.btn.details}"></p></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><p th:text="${text}"></p></td>
+					</tr>
+				</tbody>
+			</table>
+			<input type="hidden" name="keepword" th:value="${word}">
+			<button class="ui button" type="submit" name="fromdisplay"
+				th:value="*{page}">
+				<p th:text="#{view.btn.return}"></p>
+			</button>
+		</form>
+	</div>
 </body>
 </html>
