2019/08/08 15:58 index display searchResultsレイアウト修正

--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -11,6 +11,7 @@
 </style>
 </head>
 <body>
+<div class="ui hidden divider"></div>
 	<div class="ui text container">
 		<form th:action="@{/return}" method="post">
 			<table class="ui single line table">
