2019/08/13 Result2Util コメント追加しました。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 		</form>
 		<div class="ui hidden divider"></div>
 		<div class="ui divider"></div>
-		<form th:action="@{/result}" th:object="${test}" method="post">
+		<form th:action="@{/result}" th:object="${Indexs}" method="post">
 			<table class="ui compact celled table" style="font-size: 9.5pt;">
 				<thead>
 					<tr>
