2019/08/13 Result2Util コメント追加しました。

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -74,7 +74,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 			</form>
 		</div>
 		<div class="ui divider"></div>
-		<form th:action="@{/result}" th:object="${test}" method="post">
+		<form th:action="@{/result}" th:object="${Indexs}" method="post">
 			<table class="ui compact celled table" style="font-size: 9.5pt;">
 				<!-- 見出し。ここも可変になるように後々はしたい -->
 				<thead>
