--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 		</div>
 
 		<div class="ui divider"></div>
-		<form th:action="@{/result}" th:object="${test}" method="post">
+		<form th:action="@{/result}" th:object="${Indexs}" method="post">
 			<table class="ui compact celled table" style="font-size: 9.5pt;">
 				<!-- 見出し。ここも可変になるように後々はしたい -->
 				<thead>
@@ -89,7 +89,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 				</thead>
 				<!-- DB内の表示、ここも可変になるように後々はしたい -->
 				<tbody>
-					<tr th:each="list : ${test}" th:object="${list}">
+					<tr th:each="list : ${Indexs}" th:object="${list}">
 						<td th:text="*{date}"></td>
 						<td th:text="*{cost}"></td>
 						<td th:text="*{age}"></td>
