可変機能の拡張 by高野

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,6 +80,8 @@ ${paging.totalRecordNum} + '件中'
 					<tr>
 						<th:bloack th:each="list, stat: ${head}">
 						<th th:text="${list}"></th>
+						</th:bloack>
+						<th></th>
 					</tr>
 				</thead>
 				<tbody>
