--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -71,7 +71,7 @@ ${paging.totalRecordNum} + '件中'
 						<th:block th:each="nakami, stat: ${list}">
 							<td th:if="${stat.index < columnlength}" th:text="${nakami}"></td>
 							<td th:if="${stat.last == true}" style="text-align: center;">
-							<button type="submit" name="hidden" class="mini ui button"
+							<button type="submit" name="honbun" class="mini ui button"
 								th:value="${nakami}">
 								<p th:text="#{view.btn.details}"></p>
 							</button>
