--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -25,14 +25,14 @@ a.disabled {
 		</div>
 		<p
 			th:text="
-${paging.totalRecordNum} + '件中'
-+ ${paging.fromRecordNum} + '～'
-+ ${paging.toRecordNum} + '件表示中'"></p>
+${paging.totalRecordNum} + #{view.label.incase}
++ ${paging.fromRecordNum} + #{view.label.tilde}
++ ${paging.toRecordNum} + #{view.label.display}"></p>
 		<p th:text="#{view.label.freeword}">
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
 			<div class="ui input focus">
-				<input name=sWord type="text" placeholder="検索ワードを入力">
+				<input name=sWord type="text" placeholder="検索ワードを入力" maxlength="64">
 			</div>
 			<button type="submit" name="search" class="ui primary button">
 				<p th:text="#{view.btn.search}">
@@ -42,7 +42,6 @@ ${paging.totalRecordNum} + '件中'
 		<div class="ui divider"></div>
 		<form th:action="@{/result}" th:object="${test}" method="post">
 			<table class="ui compact celled table" style="font-size: 9.5pt;">
-				<!-- 見出し。ここも可変になるように後々はしたい -->
 				<thead>
 					<tr>
 						<th:block th:each="list, stat: ${head}">
@@ -65,7 +64,6 @@ ${paging.totalRecordNum} + '件中'
 						<th></th>
 					</tr>
 				</thead>
-				<!-- DB内の表示、ここも可変になるように後々はしたい -->
 				<tbody>
 					<tr th:each="list : ${sResults}" th:object="${list}">
 						<th:block th:each="nakami, stat: ${list}">
