--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -43,7 +43,7 @@ a.disabled {
 			th:text="
 ${paging.totalRecordNum} + #{view.label.incase}
 + ${paging.fromRecordNum} + #{view.label.tilde}
-+ ${paging.toRecordNum} + #{view.label.display}"></p>
++ ${paging.toRecordNum} + #{view.label.preview}"></p>
 		<p th:text="#{view.label.freeword}">
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
