--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@ a.disabled {
 	<div class="ui container">
 		<div class="ui header">
 			<a class="logo" href="/"><img src="./img/ShanteryLogo.jpg"
-				alt="シャンテリーロゴ"></a>
+				th:alt="#{view.shanterylog}"></a>
 			<div class="content">
 				<p th:text="#{view.label.searchtitle}">
 				<div class="sub header" th:text="#{view.label.casefacter}"></div>
@@ -52,7 +52,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
 			<div class="ui input focus">
-				<input name=sWord type="text" placeholder="検索ワードを入力" maxlength="64">
+				<input name=sWord type="text" th:placeholder="#{view.searchword}" maxlength="64">
 			</div>
 			<button type="submit" name="search" class="ui primary button">
 				<p th:text="#{view.btn.search}"></p>
