placeholderの外部化 by高野

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@ a.disabled {
 	<div class="ui container">
 		<div class="ui header">
 			<a class="logo" href="/"><img src="./img/ShanteryLogo.jpg"
-				alt="シャンテリーロゴ"></a>
+				th:alt="#{view.shanterylog}"></a>
 			<div class="content">
 				<p class="header" th:text="#{view.label.searchtitle}">
 			</div>
@@ -54,7 +54,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
 			<div class="ui input focus">
-				<input name=sWord type="text" placeholder="検索ワードを入力" maxlength="64">
+				<input name=sWord type="text" th:placeholder="#{view.searchword}" maxlength="64">
 			</div>
 			<button type="submit" name="search" class="ui primary button">
 				<p th:text="#{view.btn.search}"></p>
