--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -48,7 +48,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 			</th:text>
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
 			<div class="ui input focus">
-				<input name=sWord type="text" placeholder="検索ワードを入力" maxlength="64">
+				<input name=sWord type="text" th:value="${sWord}" placeholder="検索ワードを入力" maxlength="64">
 			</div>
 			<button type="submit" name="search" class="ui primary button">
 				<p th:text="#{view.btn.search}">
