2019/08/20 ソートしたとき・本文詳細から戻った時に検索文字保持 照屋

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -41,7 +41,7 @@ a.disabled {
 	<div class="ui container">
 		<div class="ui header">
 			<a class="logo" href="/"><img src="./img/ShanteryLogo.jpg"
-				th:alt="#{view.shanterylog}"></a>
+				th:alt="#{view.shanterylogo}"></a>
 			<div class="content">
 				<p class="header" th:text="#{view.label.searchtitle}">
 			</div>
