--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -49,7 +49,7 @@ ${paging.totalRecordNum} + #{view.label.incase}
 		<form th:action="@{/sresults}" th:object="${searching}" method="post">
 			<div class="ui input focus">
 
-				<input name=sWord type="text" th:value="${sWord}" placeholder="#{view.searchword}" maxlength="64">
+				<input name=sWord type="text" th:value="${sWord}" th:placeholder="#{view.searchword}" maxlength="64">
 
 			</div>
 			<button type="submit" name="search" class="ui primary button">
