競合の修正 by高野

--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>本文詳細</title>
+<title th:text="#{view.index.details}">本文詳細</title>
 <link rel="stylesheet" href="./css/semantic.min.css">
 <style>
 </style>
