2019/08/28 display.htmlのタイトルを直しました。

--- a/src/main/resources/templates/display.html
+++ b/src/main/resources/templates/display.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title th:text="#{view.index.details}"></title>
+<title th:text="#{view.btn.details}"></title>
 <link rel="stylesheet" href="./css/semantic.min.css">
 <style>
 </style>
